Added: - @PostConstruct - BeanPostProcessor - BeanFactoryPostProcessor